updated and added std error and save fig

--- a/Analysis/majick_migration.ipynb
+++ b/Analysis/majick_migration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -190,39 +190,53 @@
     "blue_whale_2008 = df_blue_whale.loc[df_blue_whale['year'] == 2008]\n",
     "\n",
     "# Calculating monthly averages of latitdue & longitude & also calculating standard error \n",
-    "bw_lat_mean_1999 = blue_whale_1999.groupby([\"year\",\"month\"])[\"latitude\"].mean()\n",
-    "bw_lat_mean_2005 = blue_whale_2005.groupby([\"year\",\"month\"])[\"latitude\"].mean()\n",
-    "bw_lat_mean_2007 = blue_whale_2007.groupby([\"year\",\"month\"])[\"latitude\"].mean()\n",
-    "bw_lat_mean_2008 = blue_whale_2008.groupby([\"year\",\"month\"])[\"latitude\"].mean()\n",
-    "\n",
+    "bw_lat_mean_1999 = blue_whale_1999.groupby(['month']).mean()\n",
+    "bw_lat_mean_1999.reset_index(drop=False,inplace=True)\n",
     "bw_lat_std_1999 = blue_whale_1999.groupby([\"year\",\"month\"])[\"latitude\"].sem()\n",
+    "\n",
+    "bw_lat_mean_2005 = blue_whale_2005.groupby(['month']).mean()\n",
+    "bw_lat_mean_2005.reset_index(drop=False,inplace=True)\n",
     "bw_lat_std_2005 = blue_whale_2005.groupby([\"year\",\"month\"])[\"latitude\"].sem()\n",
+    "\n",
+    "bw_lat_mean_2007 = blue_whale_2007.groupby(['month']).mean()\n",
+    "bw_lat_mean_2007.reset_index(drop=False,inplace=True)\n",
     "bw_lat_std_2007 = blue_whale_2007.groupby([\"year\",\"month\"])[\"latitude\"].sem()\n",
+    "\n",
+    "bw_lat_mean_2008 = blue_whale_2008.groupby(['month']).mean()\n",
+    "bw_lat_mean_2008.reset_index(drop=False,inplace=True)\n",
     "bw_lat_std_2008 = blue_whale_2008.groupby([\"year\",\"month\"])[\"latitude\"].sem()\n",
     "\n",
-    "# Plotting the error bar for each year\n",
-    "plt.errorbar(np.sort(blue_whale_1999.month.unique()),bw_lat_mean_1999,yerr=bw_lat_std_1999,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'purple',linewidth=2.0,label=\"1999\")\n",
-    "plt.errorbar(np.sort(blue_whale_2005.month.unique()),bw_lat_mean_2005,yerr=bw_lat_std_2005,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'black',linewidth=2.0,label=\"2005\")\n",
-    "plt.errorbar(np.sort(blue_whale_2007.month.unique()),bw_lat_mean_2007,yerr=bw_lat_std_2007,ecolor='black',capsize=1,elinewidth=1, alpha = 0.75,color = 'red',linewidth=2.0,label=\"2007\")\n",
-    "plt.errorbar(np.sort(blue_whale_2008.month.unique()),bw_lat_mean_2008,yerr=bw_lat_std_2008,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'green',linewidth=2.0,label=\"2008\")\n",
+    "\n",
+    "# # Plotting the error bar for each year\n",
+    "plt.errorbar(bw_lat_mean_1999.month,bw_lat_mean_1999.latitude,yerr=bw_lat_std_1999,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'purple',linewidth=2.0,label=\"1999\")\n",
+    "plt.errorbar(bw_lat_mean_2005.month,bw_lat_mean_2005.latitude,yerr=bw_lat_std_2005,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'black',linewidth=2.0,label=\"2005\")\n",
+    "plt.errorbar(bw_lat_mean_2005.month,bw_lat_mean_2007.latitude,yerr=bw_lat_std_2007,ecolor='black',capsize=1,elinewidth=1, alpha = 0.75,color = 'red',linewidth=2.0,label=\"2007\")\n",
+    "plt.errorbar(bw_lat_mean_2008.month,bw_lat_mean_2008.latitude,yerr=bw_lat_std_2008,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'green',linewidth=2.0,label=\"2008\")\n",
     "plt.xlabel(\"Months\")\n",
     "plt.ylabel(\"Monthly avg latitude\")\n",
     "plt.title(\"Blue whale\")\n",
     "plt.grid()\n",
     "plt.legend(title=\"Year\",loc='upper right', bbox_to_anchor=(1.225, 1.03))\n",
-    "plt.savefig(\"./Output/Blue_Whale_Months Vs Mean_Lat.png\")\n",
+    "plt.savefig(\"./Output/Blue_Whale_Months Vs Mean_Lat.png\", pad_inches=1, bbox_inches= 'tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41428e69359f4b7eaa9fd401114c80b0",
+       "model_id": "449ddfb6aea1435fae3aec19f188eac8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,20 +251,15 @@
    "source": [
     "# Plotting the data for Blue whale on gmaps\n",
     "fig = gmaps.figure()\n",
-    "fig\n",
-    "bw_lng_mean_1999 = blue_whale_1999.groupby([\"year\",\"month\"])[\"longitude\"].mean()\n",
-    "bw_lng_mean_2005 = blue_whale_2005.groupby([\"year\",\"month\"])[\"longitude\"].mean()\n",
-    "bw_lng_mean_2007 = blue_whale_2007.groupby([\"year\",\"month\"])[\"longitude\"].mean()\n",
-    "bw_lng_mean_2008 = blue_whale_2008.groupby([\"year\",\"month\"])[\"longitude\"].mean()\n",
     "\n",
-    "bw_df_1999 = pd.DataFrame({\"Avg latitude\": bw_lat_mean_1999,\n",
-    "                       \"Avg longitude\":bw_lng_mean_1999 })\n",
-    "bw_df_2005 = pd.DataFrame({\"Avg latitude\": bw_lat_mean_2005,\n",
-    "                       \"Avg longitude\":bw_lng_mean_2005 })\n",
-    "bw_df_2007 = pd.DataFrame({\"Avg latitude\": bw_lat_mean_2007,\n",
-    "                       \"Avg longitude\":bw_lng_mean_2007 })\n",
-    "bw_df_2008 = pd.DataFrame({\"Avg latitude\": bw_lat_mean_2008,\n",
-    "                       \"Avg longitude\":bw_lng_mean_2008 })\n",
+    "bw_df_1999 = pd.DataFrame({\"Avg latitude\": bw_lat_mean_1999[\"latitude\"],\n",
+    "                           \"Avg longitude\":bw_lat_mean_1999[\"longitude\"] })\n",
+    "bw_df_2005 = pd.DataFrame({\"Avg latitude\": bw_lat_mean_2005[\"latitude\"],\n",
+    "                           \"Avg longitude\":bw_lat_mean_2005[\"longitude\"] })\n",
+    "bw_df_2007 = pd.DataFrame({\"Avg latitude\": bw_lat_mean_2007[\"latitude\"],\n",
+    "                           \"Avg longitude\":bw_lat_mean_2007[\"longitude\"] })\n",
+    "bw_df_2008 = pd.DataFrame({\"Avg latitude\": bw_lat_mean_2008[\"latitude\"],\n",
+    "                           \"Avg longitude\":bw_lat_mean_2008[\"longitude\"] })\n",
     "\n",
     "# Creating tuple of latitude & longitude for plotting on gmaps\n",
     "bw_cord1999 =[]\n",
@@ -266,10 +275,10 @@
     "for lat, lng in bw_df_2008.itertuples(index=False):\n",
     "   bw_cord2008.append([lat,lng])\n",
     "\n",
-    "bw_mrk1999 = gmaps.symbol_layer(cord1999,fill_color='white', stroke_color='green', scale=4)\n",
-    "bw_mrk2005 = gmaps.symbol_layer(cord2005,fill_color='white', stroke_color='purple', scale=4)\n",
-    "bw_mrk2007 = gmaps.symbol_layer(cord2007,fill_color='white', stroke_color='red', scale=4)\n",
-    "bw_mrk2008 = gmaps.symbol_layer(cord2008,fill_color='white', stroke_color='black', scale=4)\n",
+    "bw_mrk1999 = gmaps.symbol_layer(bw_cord1999,fill_color='white', stroke_color='green', scale=4)\n",
+    "bw_mrk2005 = gmaps.symbol_layer(bw_cord2005,fill_color='white', stroke_color='purple', scale=4)\n",
+    "bw_mrk2007 = gmaps.symbol_layer(bw_cord2007,fill_color='white', stroke_color='red', scale=4)\n",
+    "bw_mrk2008 = gmaps.symbol_layer(bw_cord2008,fill_color='white', stroke_color='black', scale=4)\n",
     "fig.add_layer(bw_mrk1999)\n",
     "fig.add_layer(bw_mrk2005)\n",
     "fig.add_layer(bw_mrk2007)\n",
@@ -279,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -314,41 +323,45 @@
     "humpback_2016 = df_humpback_whale.loc[df_humpback_whale['year'] == 2016]\n",
     "\n",
     "# Calculating monthly averages of latitdue & longitude & also calculating standard error\n",
-    "hw_lat_mean_1992 = humpback_1992.groupby([\"year\",\"month\"])[\"latitude\"].mean()\n",
-    "hw_lat_mean_1997 = humpback_1997.groupby([\"year\",\"month\"])[\"latitude\"].mean()\n",
-    "hw_lat_mean_2000 = humpback_2000.groupby([\"year\",\"month\"])[\"latitude\"].mean()\n",
-    "hw_lat_mean_2006 = humpback_2006.groupby([\"year\",\"month\"])[\"latitude\"].mean()\n",
-    "hw_lat_mean_2016 = humpback_2016.groupby([\"year\",\"month\"])[\"latitude\"].mean()\n",
-    "\n",
-    "hw_lat_std_1992 = humpback_1992.groupby([\"year\",\"month\"])[\"latitude\"].sem()\n",
+    "hw_lat_mean_1997 = humpback_1997.groupby(['month']).mean()\n",
+    "hw_lat_mean_1997.reset_index(drop=False,inplace=True)\n",
     "hw_lat_std_1997 = humpback_1997.groupby([\"year\",\"month\"])[\"latitude\"].sem()\n",
+    "\n",
+    "hw_lat_mean_2000 = humpback_2000.groupby(['month']).mean()\n",
+    "hw_lat_mean_2000.reset_index(drop=False,inplace=True)\n",
     "hw_lat_std_2000 = humpback_2000.groupby([\"year\",\"month\"])[\"latitude\"].sem()\n",
+    "\n",
+    "hw_lat_mean_2006 = humpback_2006.groupby(['month']).mean()\n",
+    "hw_lat_mean_2006.reset_index(drop=False,inplace=True)\n",
     "hw_lat_std_2006 = humpback_2006.groupby([\"year\",\"month\"])[\"latitude\"].sem()\n",
+    "\n",
+    "hw_lat_mean_2016 = humpback_2016.groupby(['month']).mean()\n",
+    "hw_lat_mean_2016.reset_index(drop=False,inplace=True)\n",
     "hw_lat_std_2016 = humpback_2016.groupby([\"year\",\"month\"])[\"latitude\"].sem()\n",
     "\n",
-    "# Plotting the error bar for each year\n",
-    "plt.errorbar(np.sort(humpback_1997.month.unique()),hw_lat_mean_1997,yerr=hw_lat_std_1997,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'green',linewidth=2.0,label = \"1997\")\n",
-    "plt.errorbar(np.sort(humpback_2000.month.unique()),hw_lat_mean_2000,yerr=hw_lat_std_2000,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'blue',linewidth=2.0,label = \"2000\")\n",
-    "plt.errorbar(np.sort(humpback_2006.month.unique()),hw_lat_mean_2006,yerr=hw_lat_std_2006,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'red',linewidth=2.0,label = \"2006\")\n",
-    "plt.errorbar(np.sort(humpback_2016.month.unique()),hw_lat_mean_2016,yerr=hw_lat_std_2016,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'black',linewidth=2.0,label = \"2016\")\n",
+    " # Plotting the error bar for each year\n",
+    "plt.errorbar(hw_lat_mean_1997.month,hw_lat_mean_1997.latitude,yerr=hw_lat_std_1997,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'green',linewidth=2.0,label = \"1997\")\n",
+    "plt.errorbar(hw_lat_mean_2000.month,hw_lat_mean_2000.latitude,yerr=hw_lat_std_2000,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'blue',linewidth=2.0,label = \"2000\")\n",
+    "plt.errorbar(hw_lat_mean_2006.month,hw_lat_mean_2006.latitude,yerr=hw_lat_std_2006,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'red',linewidth=2.0,label = \"2006\")\n",
+    "plt.errorbar(hw_lat_mean_2016.month,hw_lat_mean_2016.latitude,yerr=hw_lat_std_2016,ecolor='black',capsize=1,elinewidth=1,alpha = 0.75,color = 'black',linewidth=2.0,label = \"2016\")\n",
     "plt.xlabel(\"Number of months\")\n",
     "plt.ylabel(\"Montly avg latitude\")\n",
     "plt.title(\"Humpback whale\")\n",
     "plt.grid()\n",
     "plt.legend(title=\"Year\",loc='upper right', bbox_to_anchor=(1.225, 1.03))\n",
-    "plt.savefig(\"./Output/Humpback_Whales_Months Vs Mean_Lat.png\")\n",
+    "plt.savefig(\"./Output/Humpback_Whales_Months Vs Mean_Lat.png\", pad_inches=1, bbox_inches= 'tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41428e69359f4b7eaa9fd401114c80b0",
+       "model_id": "449ddfb6aea1435fae3aec19f188eac8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -362,20 +375,15 @@
    ],
    "source": [
     "# Plotting the data for humpback whale on gmaps\n",
-    "hw_lng_mean_1992 = humpback_1992.groupby([\"year\",\"month\"])[\"longitude\"].mean()\n",
-    "hw_lng_mean_1997 = humpback_1997.groupby([\"year\",\"month\"])[\"longitude\"].mean()\n",
-    "hw_lng_mean_2000 = humpback_2000.groupby([\"year\",\"month\"])[\"longitude\"].mean()\n",
-    "hw_lng_mean_2006 = humpback_2006.groupby([\"year\",\"month\"])[\"longitude\"].mean()\n",
-    "hw_lng_mean_2016 = humpback_2016.groupby([\"year\",\"month\"])[\"longitude\"].mean()\n",
     "\n",
-    "hw_df_1997 = pd.DataFrame({\"Avg latitude\": hw_lat_mean_1997,\n",
-    "                       \"Avg longitude\":hw_lng_mean_1997 })\n",
-    "hw_df_2000 = pd.DataFrame({\"Avg latitude\": hw_lat_mean_2000,\n",
-    "                       \"Avg longitude\":hw_lng_mean_2000 })\n",
-    "hw_df_2006 = pd.DataFrame({\"Avg latitude\": hw_lat_mean_2006,\n",
-    "                       \"Avg longitude\":hw_lng_mean_2006 })\n",
-    "hw_df_2016 = pd.DataFrame({\"Avg latitude\": hw_lat_mean_2016,\n",
-    "                       \"Avg longitude\":hw_lng_mean_2016})\n",
+    "hw_df_1997 = pd.DataFrame({\"Avg latitude\": hw_lat_mean_1997[\"latitude\"],\n",
+    "                           \"Avg longitude\":hw_lat_mean_1997[\"longitude\"] })\n",
+    "hw_df_2000 = pd.DataFrame({\"Avg latitude\": hw_lat_mean_2000[\"latitude\"],\n",
+    "                           \"Avg longitude\":hw_lat_mean_2000[\"longitude\"] })\n",
+    "hw_df_2006 = pd.DataFrame({\"Avg latitude\": hw_lat_mean_2006[\"latitude\"],\n",
+    "                           \"Avg longitude\":hw_lat_mean_2006[\"longitude\"] })\n",
+    "hw_df_2016 = pd.DataFrame({\"Avg latitude\": hw_lat_mean_2016[\"latitude\"],\n",
+    "                           \"Avg longitude\":hw_lat_mean_2016[\"longitude\"]})\n",
     "\n",
     "hw_cord1997 =[]\n",
     "for lat, lng in hw_df_1997.itertuples(index=False):\n",
@@ -580,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
