added arctic gmaps

--- a/Analysis/majick_migration.ipynb
+++ b/Analysis/majick_migration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -195,6 +195,108 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "00faa45f83ff4ccf9a1df92d35a4bed3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ar_df_1980 = pd.DataFrame({\"Avg latitude\":arctic_mean_1980[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_1980[\"longitude\"] })\n",
+    "ar_df_1981 = pd.DataFrame({\"Avg latitude\": arctic_mean_1981[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_1981[\"longitude\"] })\n",
+    "ar_df_1984 = pd.DataFrame({\"Avg latitude\": arctic_mean_1984[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_1984[\"longitude\"] })\n",
+    "ar_df_1985 = pd.DataFrame({\"Avg latitude\": arctic_mean_1985[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_1985[\"longitude\"] })\n",
+    "ar_df_1991 = pd.DataFrame({\"Avg latitude\":arctic_mean_1991[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_1991[\"longitude\"] })\n",
+    "ar_df_1995 = pd.DataFrame({\"Avg latitude\": arctic_mean_1995[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_1995[\"longitude\"] })\n",
+    "ar_df_2007 = pd.DataFrame({\"Avg latitude\": arctic_mean_2007[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_2007[\"longitude\"] })\n",
+    "ar_df_2008 = pd.DataFrame({\"Avg latitude\": arctic_mean_2008[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_2008[\"longitude\"] })\n",
+    "ar_df_2009 = pd.DataFrame({\"Avg latitude\": arctic_mean_2009[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_2009[\"longitude\"] })\n",
+    "ar_df_2011 = pd.DataFrame({\"Avg latitude\": arctic_mean_2011[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_2011[\"longitude\"] })\n",
+    "ar_df_2014 = pd.DataFrame({\"Avg latitude\": arctic_mean_2014[\"latitude\"],\n",
+    "                           \"Avg longitude\":arctic_mean_2014[\"longitude\"] })\n",
+    "ar_cord1980 =[]\n",
+    "for lat, lng in ar_df_1980.itertuples(index=False):\n",
+    "   ar_cord1980.append([lat,lng])\n",
+    "ar_cord1981 =[]\n",
+    "for lat, lng in ar_df_1981.itertuples(index=False):\n",
+    "   ar_cord1981.append([lat,lng])\n",
+    "ar_cord1984 =[]\n",
+    "for lat, lng in ar_df_1984.itertuples(index=False):\n",
+    "   ar_cord1984.append([lat,lng])\n",
+    "ar_cord1985 =[]\n",
+    "for lat, lng in ar_df_1985.itertuples(index=False):\n",
+    "   ar_cord1985.append([lat,lng])\n",
+    "ar_cord1991 =[]\n",
+    "for lat, lng in ar_df_1991.itertuples(index=False):\n",
+    "   ar_cord1991.append([lat,lng])\n",
+    "ar_cord1995 =[]\n",
+    "for lat, lng in ar_df_1995.itertuples(index=False):\n",
+    "   ar_cord1995.append([lat,lng])\n",
+    "ar_cord2007 =[]\n",
+    "for lat, lng in ar_df_2007.itertuples(index=False):\n",
+    "   ar_cord2007.append([lat,lng])\n",
+    "ar_cord2008 =[]\n",
+    "for lat, lng in ar_df_2008.itertuples(index=False):\n",
+    "   ar_cord2008.append([lat,lng])\n",
+    "ar_cord2009 =[]\n",
+    "for lat, lng in ar_df_2009.itertuples(index=False):\n",
+    "   ar_cord2009.append([lat,lng])\n",
+    "ar_cord2011 =[]\n",
+    "for lat, lng in ar_df_2011.itertuples(index=False):\n",
+    "   ar_cord2011.append([lat,lng])\n",
+    "ar_cord2014 =[]\n",
+    "for lat, lng in ar_df_2014.itertuples(index=False):\n",
+    "   ar_cord2014.append([lat,lng])\n",
+    "\n",
+    "fig = gmaps.figure()\n",
+    "ar_mrk1980 = gmaps.symbol_layer(ar_cord1980,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk1981 = gmaps.symbol_layer(ar_cord1981,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk1984 = gmaps.symbol_layer(ar_cord1984,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk1985 = gmaps.symbol_layer(ar_cord1985,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk1991 = gmaps.symbol_layer(ar_cord1991,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk1995 = gmaps.symbol_layer(ar_cord1995,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk2007 = gmaps.symbol_layer(ar_cord2007,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk2008 = gmaps.symbol_layer(ar_cord2008,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk2009 = gmaps.symbol_layer(ar_cord2009,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk2011 = gmaps.symbol_layer(ar_cord2011,fill_color='black', stroke_color='white', scale=4)\n",
+    "ar_mrk2014 = gmaps.symbol_layer(ar_cord2014,fill_color='black', stroke_color='white', scale=4)\n",
+    "fig.add_layer(ar_mrk1980)\n",
+    "fig.add_layer(ar_mrk1981)\n",
+    "fig.add_layer(ar_mrk1985)\n",
+    "fig.add_layer(ar_mrk1991)\n",
+    "fig.add_layer(ar_mrk1995)\n",
+    "fig.add_layer(ar_mrk2007)\n",
+    "fig.add_layer(ar_mrk2008)\n",
+    "fig.add_layer(ar_mrk2009)\n",
+    "fig.add_layer(ar_mrk2011)\n",
+    "fig.add_layer(ar_mrk2014)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {
     "scrolled": true
    },
@@ -264,13 +366,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f346da0ad2284ec3824f16f31b72f53a",
+       "model_id": "0b7b6e3999a94e9892db0c67170b6f40",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -389,13 +491,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f346da0ad2284ec3824f16f31b72f53a",
+       "model_id": "0b7b6e3999a94e9892db0c67170b6f40",
        "version_major": 2,
        "version_minor": 0
       },
