--- a/Analysis/majick_migration.ipynb
+++ b/Analysis/majick_migration.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -107,13 +107,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "650cb38fdedd42069eb0b80e8575b95f",
+       "model_id": "04a754e3e36a491482264aafc3440cc0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -234,13 +234,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9d105f1618f4216aef1ec99486237ad",
+       "model_id": "d0243795a6d441758b0047050c291b2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -430,13 +430,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9d105f1618f4216aef1ec99486237ad",
+       "model_id": "20e7f3a8006747a4ab61f8ee0958bbed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -478,12 +478,20 @@
     "hw_mrk2000 = gmaps.symbol_layer(hw_cord2000,fill_color='white', stroke_color='purple', scale=4)\n",
     "hw_mrk1997 = gmaps.symbol_layer(hw_cord1997,fill_color='white', stroke_color='green', scale=4)\n",
     "\n",
+    "fig = gmaps.figure()\n",
     "fig.add_layer(hw_mrk2016)\n",
     "fig.add_layer(hw_mrk2006)\n",
     "fig.add_layer(hw_mrk2000)\n",
     "fig.add_layer(hw_mrk1997)\n",
     "fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
